# app-finder

./: .gitignore  AI_USAGE.md  LICENSE  README.md  TIPS.md  app.py  build_win_exe.bat  lookup_appinfo.spec  lookup_appinfo_mac.spec  main_win.py  pyproject.toml
cli/: __init__.py  core.py  main.py  mcp_server.py
icon_src/: app_icon.icns  make_icon.py
static/: main-legacy.js  main-v4.js  main.js  mobile.css  mobile.html  mobile.js  style-legacy.css  style-v4.css  style.css  tips.js
templates/: index-legacy.html  index.html
windows_pkg_src/: Start.bat  Stop.bat  autostart-off.bat  autostart-on.bat  background.vbs  launch.py  run.py  setup.ps1
