[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "applookup"
version = "2.0.0"
description = "App metadata lookup CLI/MCP — query iOS + Android stores by package name, app name, or iOS App Store ID."
readme = "AI_USAGE.md"
requires-python = ">=3.10"
authors = [{name = "RickXiong"}]
license = {text = "MIT"}
keywords = ["app", "store", "metadata", "ios", "android", "package", "bundle-id", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
# 仅声明 CLI/MCP 自身需要的新依赖；其他（flask/requests/bs4/...）由仓库 venv 已提供
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
applookup     = "cli.main:main"
applookup-mcp = "cli.mcp_server:main"

[project.urls]
Homepage   = "https://github.com/RickXiong/app-finder"
Repository = "https://github.com/RickXiong/app-finder"
Issues     = "https://github.com/RickXiong/app-finder/issues"

[tool.setuptools]
packages = ["cli"]
